--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ rust-embed = "6.4.0"
 mime_guess = "2.0.4"
 deb-version = "0.1"
 serde_json = "1"
-indexmap = "1"
+indexmap = {version = "1",features = ["serde"]}
 once_cell = "1"
 html-escape = "0.2"
 regex = "1"
