--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,21 +26,19 @@ textwrap = "0.15"
 sqlx = { version = "*", features = [
     "sqlite",
     "postgres",
-    "runtime-tokio-rustls"
+    "runtime-tokio-rustls",
 ] }
 rust-embed = "6.4.0"
 mime_guess = "2.0.4"
 deb-version = "0.1"
 serde_json = "1"
-indexmap = {version = "1",features = ["serde"]}
-once_cell = "1"
+indexmap = { version = "1", features = ["serde"] }
 html-escape = "0.2"
-regex = "1"
-lazy_static = "1"
 abbs-meta-tree = { git = "https://github.com/7rah/abbs-meta-rs" }
 size = "0.4"
 itertools = "0.10.2"
 hex = "0.4.3"
+proc-macro-regex = "1.1.0"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
