main: add support for UNIX socket

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ itertools = "0.10"
 hex = "0.4"
 proc-macro-regex = "^1"
 structopt = "0.3"
+hyper = "0.14"
+hyperlocal = "0.8"
 
 [profile.dev.package.askama_derive]
 opt-level = 3
